--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
   },
   "homepage": "https://github.com/abponder/audrev_api#readme",
   "dependencies": {
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
+    "express-session": "^1.17.3",
     "mysql2": "^2.3.3",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "passport": "^0.6.0"
   }
 }
