--- a/package.json
+++ b/package.json
@@ -24,13 +24,15 @@
   "homepage": "https://github.com/abponder/audrev_api#readme",
   "dependencies": {
     "connect-flash": "^0.1.1",
-    "cookie-parser": "^1.4.6",
+    "cookie-parser": "^1.3.5",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
-    "express-session": "^1.17.3",
+    "express-session": "^1.11.3",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.12",
-    "passport": "^0.6.0"
+    "passport": "^0.2.2",
+    "bcrypt-nodejs": "0.0.3",
+    "passport-local": "^1.0.0"
   }
 }
